# cuBQL

./: .gitignore  3rdParty.txt  CMakeLists.txt  CONTRIBUTING.md  ContributorAgreement.txt  LICENSE  README.md
.github/action-scripts/: install-cuda-windows.ps1  install_cuda_ubuntu.sh
.github/workflows/: Ubuntu.yml  Windows.yml
cuBQL/: CMakeLists.txt  bvh.h
cuBQL/builder/: cpu.h  cuda.h  omp.h  openmp.h
cuBQL/builder/cpu/: instantiate_builders.cpp  spatialMedian.h
cuBQL/builder/cuda/: aggregate_refit.h  builder_common.h  elh_builder.h  gpu_builder.h  instantiate_builders.cu  radix.h  rebinMortonBuilder.h  refit.h  refit_aggregate.h  sah_builder.h  sm_builder.h  wide_gpu_builder.h
cuBQL/builder/omp/: AtomicBox.h  common.h  refit.h  sort.h  spatialMedian.h
cuBQL/builder/openmp/: build_omp_target.h
cuBQL/math/: Ray.h  affine.h  box.h  common.h  conservativeDistances.h  constants.h  linear.h  math.h  vec.h
cuBQL/queries/common/: Ray.h
cuBQL/queries/pointData/: findClosest.h  knn.h  old_fcp.h
cuBQL/queries/triangleData/: Triangle.h  anyWithinRadius.h  boxInsideOutsideIntersects.h  closestPointOnAnyTriangle.h  crossingCount.h  lineOfSight.h  pointInsideOutside.h  trianglesInBox.h  trianglesWithinBox.h
cuBQL/queries/triangleData/math/: boxTriangleIntersections.h  pointToTriangleDistance.h  rayTriangleIntersections.h
cuBQL/queries/triangles/: RayTriangleIntersection.h  Triangle.h
cuBQL/queries/triangles/closestPointOnAnyTriangle/: cpat.h
cuBQL/queries/triangles/crossingCount/: cc.h  crossingCount.h
cuBQL/traversal/: aggregateApproximate.h  fixedAnyShapeQuery.h  fixedBoxQuery.h  fixedRadiusQuery.h  rayQueries.h  shrinkingRadiusQuery.h
samples/: CMakeLists.txt
samples/common/: CMakeLists.txt  CmdLine.h  Generator.cpp  Generator.h  IO.h  loadBinMesh.cpp  loadBinMesh.h  loadOBJ.cpp  loadOBJ.h  tiny_obj_loader.h
samples/s01_closestPoint_points_cpu/: CMakeLists.txt  closestPoint.cpp
samples/s01_closestPoint_points_gpu/: CMakeLists.txt  closestPoint.cu  closestPoint_WideBVH.cu
samples/s02_distanceToTriangleMesh/: distanceToTriangleMesh.cu
samples/s03_insideOutsideOfClosedMesh/: insideOutside.cu
samples/s04_boxOverlapsOrInsideSurfaceMesh/: boxOverlapsOrInsideSurfaceMesh.cu
samples/s05_lineOfSight/: lineOfSight.cu
samples/s06_anyTriangleWithinRadius/: anyTriangleWithinRadius.cu
samples/s07_aggregateNBody/: aggregateNBody.cu
samples/test_bvhCompact/: compact.cu
testing/: omp_sort.cpp
testing/bvh/: CMakeLists.txt  buildBench.cpp  checkBuilders.cu
testing/points/: CMakeLists.txt  closestPoint.cpp  closestPoint.h  knn5.cpp  knn5.h
